Update global scrollbar styles and fix query key in BudgetsList and RouteSelectFilter components

--- a/app/globals.css
+++ b/app/globals.css
@@ -80,3 +80,18 @@
     @apply bg-background text-foreground;
   }
 }
+
+::-webkit-scrollbar {
+  width: 8px;
+  background-color: hsl(var(--popover));
+  transition: background-color 0.5s;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: hsl(var(--primary) / 0.5);
+  border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: hsl(var(--primary));
+}
